Fix plugin settings