@@ -17,30 +17,19 @@ import java.net.URLClassLoader;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.jar.JarEntry;
-import java.util.jar.JarFile;
 
 public class DynamicLauncher {
 
     public static Graph<MethodNode> graph = new Graph<>();
     public static GraphBuilderLoader<MethodNode> loader;
 
-    public static void launchDynamic(String[] args) throws DynamicAnalysisException, IOException, GraphBuilderException,
-            CannotCompileException, ClassNotFoundException, NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
+    public static void launchDynamic(String[] args, Enumeration<JarEntry> entries) throws DynamicAnalysisException,
+            IOException, GraphBuilderException {
 
-        long time = System.currentTimeMillis();
-        String jarPath = args[0];
-        JarFile jarFile = new JarFile(jarPath);
-        Enumeration<JarEntry> entries = jarFile.entries();
-
-        // костыль to launch without plugin installation
-        Configuration.setConfigProperty("/home/olesya/HSE_2020-1/newestCodeRank/CodeRanking/src/main/java/CodeRank/app/src/main/resources/analysis.properties");
-
-        new Configuration();
         loader = new GraphBuilderLoader<>(args[1], args[2]);
         loader.createInstance();
 
-        // todo: plugin
-        File file = new File("/home/olesya/HSE_2020-1/java/maze/out/production/maze/");
+        File file = new File(args[3]);
         URL url = file.toURI().toURL();
         URL[] urls = new URL[]{url};
         ClassLoader currentLoader = new URLClassLoader(urls);
@@ -51,15 +40,15 @@ public class DynamicLauncher {
             String name = entry.getName();
             if (name.endsWith(".class") && Configuration.processPackage(name)) {
                 names.add(name);
-                String className = (name.substring(0, name.length() - 6)).replace('/', '.');
-                System.out.println(className);
-                CtClass processedClass = InformationCollector.processMethod(className);
-
+                String className = (name.substring(0, name.length() - ".class".length())).replace('/', '.');
+                System.out.println("Processing " + className);
+                CtClass processedClass = InformationCollector.processClass(className, args[3]);
                 if (processedClass != null) {
-                    processedClass.toClass();
-                } else {
-                    // todo: ?
-                    continue;
+                    try {
+                        processedClass.toClass();
+                    } catch (CannotCompileException e) {
+                        throw new DynamicAnalysisException("Unable to perform toClass operation on the class " + name);
+                    }
                 }
             }
         }
@@ -67,23 +56,20 @@ public class DynamicLauncher {
         for (String name : names) {
             String className = (name.substring(0, name.length() - 6)).replace('/', '.');
             if (name.contains("MazeSolver")) {
-                Class<?> loadedClass = currentLoader.loadClass(className);
-                System.out.println("IN INVOCATION");
-                Method meth = loadedClass.getDeclaredConstructor()
-                        .newInstance()
-//                            .getClass().getDeclaredMethod("initializeFields", int.class, int.class);
-                        .getClass().getDeclaredMethod("traverseMatrix");
-                meth.setAccessible(true);
-                meth.invoke(loadedClass.getDeclaredConstructor().newInstance());
-                break;
+                try {
+                    Class<?> loadedClass = currentLoader.loadClass(className);
+                    System.out.println("IN INVOCATION");
+                    Method meth = loadedClass.getDeclaredConstructor()
+                            .newInstance()
+                            .getClass().getDeclaredMethod("traverseMatrix");
+                    meth.setAccessible(true);
+                    meth.invoke(loadedClass.getDeclaredConstructor().newInstance());
+                    break;
+                } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException | IllegalAccessException
+                        | InvocationTargetException e) {
+                    throw new DynamicAnalysisException("Error during invocation of method " + name);
+                }
             }
         }
-
-        // TIME MEASUREMENT
-        long usedBytes = Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory();
-        System.out.print("FINAL TIME: ");
-        System.out.println(System.currentTimeMillis() - time);
-        System.out.print("FINAL SPACE: ");
-        System.out.println(usedBytes);
     }
 }
